# notion-fs

./: .gitignore  CLAUDE.md  Containerfile  main.py  pyproject.toml
config/: notion.yaml
docs/superpowers/specs/: 2026-03-31-notion-fuse-filesystem-design.md  2026-03-31-rust-rewrite-design.md
rust/: Cargo.toml
rust/src/: cache.rs  fs.rs  main.rs  notion.rs
src/: cache.rs  fs.rs  main.rs  notion.rs
